[gd_scene load_steps=4 format=3 uid="uid://5s7evq58musp"]

[ext_resource type="Texture2D" uid="uid://hq8odot6bpi" path="res://sprites/Dead Trees/Dead_Tree_6.png" id="1"]
[ext_resource type="Script" path="res://point_base.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(204.098, 184.37)

[node name="point_area" type="Area2D"]
position = Vector2(508.92, 307.203)
scale = Vector2(0.2, 0.2)
script = ExtResource("2")

[node name="Dead_Tree_6" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16.9763, -399.502)
shape = SubResource("1")

[node name="collider" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collider"]
polygon = PackedVector2Array(-182.25, -223.995, 216.351, -223.995, 193.929, -194.93, 87.636, -159.222, -11.1836, -162.544, -94.2253, -184.965, -160.659, -194.099)
one_way_collision = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
